--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <html ng-app='tankApp'>
 <head>
   <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular.min.js'></script>
-  <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.js'></script>
+  <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.js'></script>
   <script src='./vendors/phaser.min.js'></script>
   <script src='./js/app.js'></script>
   <script src='./js/routes.js'></script>
